tests/baselines/reference/numeric-separator-literal-hil-hd-nsl-hd-err.errors.txt
numeric-separator-literal-hil-hd-nsl-hd-err.ts(33,3): error TS6188: Numeric separators are not allowed here.


==== numeric-separator-literal-hil-hd-nsl-hd-err.ts (1 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not be the appear adjacent to `0x` | `0X` in a
      HexIntegerLiteral
    info: |
      NumericLiteralSeparator ::
        _
    
      HexIntegerLiteral ::
        0x HexDigits
        0X HexDigits
    
      HexDigits ::
        HexDigit
        HexDigits HexDigit
        HexDigits NumericLiteralSeparator HexDigit
    
      HexDigit::one of
        0 1 2 3 4 5 6 7 8 9 a b c d e f A B C D E F
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    0x_1
      ~
!!! error TS6188: Numeric separators are not allowed here.
    